--- a/journalApp/src/main/resources/application.properties
+++ b/journalApp/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8081
-#For local host**************
+#For **************************local host**************
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=journaldb
 #spring.data.mongodb.auto-index-creation=true
 
-#****For Mongo DB Atlast***************
+#*********************For Mongo DB Atlast***************
 spring.data.mongodb.uri=mongodb+srv://shivangiarora998_db_user:xxXYtkaQDKHyIhWo@cluster0.lw5i6un.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
